Refactored configuration management for LSP module